# all_previous_sgd_peptide_sequences

./: .gitignore  get_sgd_data.py  make_single_line_fasta.py  pyproject.toml  readme.md  run.sh
.github/workflows/: run.yml
